# cairo-dock-wayland-session

./: README.md  copyright  meson.build
data/: meson.build  wayfire.ini
libexec/: cairo-dock-wayfire-session.in  cd-session-setup-wayfire-config.py.in  meson.build
systemd/: cd-session-polkit-mate.service  cd-session-wayfire-session-pre.target  cd-session-wayfire-session.target  cd-session-wayfire.service  meson.build
wayland-sessions/: cairo-dock-wayfire.desktop.in  meson.build
